--- a/IMANUEL_TIO_2401959194_BIGDATAFIN.ipynb
+++ b/IMANUEL_TIO_2401959194_BIGDATAFIN.ipynb
@@ -6,7 +6,7 @@
       "name": "IMANUEL TIO - 2401959194 - BIGDATAFIN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+Oy/GGMV8ygflkrqeiIBr",
+      "authorship_tag": "ABX9TyPiD4iVLS4egRwPBhXyAULT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,11 +30,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "3MnOiEukHj_H"
+        "id": "3MnOiEukHj_H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a804e968-587c-4c7b-b8a9-760aab659114"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pyspark in /usr/local/lib/python3.7/dist-packages (3.2.1)\n",
+            "Requirement already satisfied: py4j in /usr/local/lib/python3.7/dist-packages (0.10.9.3)\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install pyspark py4j"
       ]
@@ -52,7 +65,7 @@
       "metadata": {
         "id": "aih3lSGwHphn"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -184,28 +197,6 @@
       ],
       "metadata": {
         "id": "fFm5e6tDI33f"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df1.show()"
-      ],
-      "metadata": {
-        "id": "GGkCudNfLEBn"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df2.show()"
-      ],
-      "metadata": {
-        "id": "B_12BMXHLZZx"
       },
       "execution_count": null,
       "outputs": []
