--- a/IMANUEL_TIO_2401959194_BIGDATAFIN.ipynb
+++ b/IMANUEL_TIO_2401959194_BIGDATAFIN.ipynb
@@ -3,10 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "IMANUEL TIO - 2401959194 - BIGDATAFIN.ipynb",
+      "name": "IMANUEL_TIO_2401959194_BIGDATAFIN.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPiD4iVLS4egRwPBhXyAULT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,24 +28,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
-        "id": "3MnOiEukHj_H",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a804e968-587c-4c7b-b8a9-760aab659114"
+        "id": "3MnOiEukHj_H"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: pyspark in /usr/local/lib/python3.7/dist-packages (3.2.1)\n",
-            "Requirement already satisfied: py4j in /usr/local/lib/python3.7/dist-packages (0.10.9.3)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install pyspark py4j"
       ]
@@ -58,14 +43,14 @@
         "from pyspark.sql import SparkSession\n",
         "spark = SparkSession.builder \\\n",
         "    .master(\"local[*]\") \\\n",
-        "    .appName(\"Learning_Spark\") \\\n",
+        "    .appName(\"Spark\") \\\n",
         "    .getOrCreate()\n",
         "sc = spark.sparkContext"
       ],
       "metadata": {
         "id": "aih3lSGwHphn"
       },
-      "execution_count": 22,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -87,7 +72,7 @@
       "metadata": {
         "id": "Gwlboj9IH9jk"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -98,7 +83,7 @@
       "metadata": {
         "id": "6az7Q5RTIDPk"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -120,7 +105,7 @@
       "metadata": {
         "id": "N8HxW3GPIPKp"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -131,7 +116,7 @@
       "metadata": {
         "id": "Vbqp1avaISWJ"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -143,7 +128,7 @@
       "metadata": {
         "id": "YPkBoJuxIZ0b"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -154,7 +139,7 @@
       "metadata": {
         "id": "vmBiOki5Ia4r"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -165,7 +150,7 @@
       "metadata": {
         "id": "IIh7yqxUIgEP"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -176,7 +161,7 @@
       "metadata": {
         "id": "Yhq8hrDcIvK-"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -187,7 +172,7 @@
       "metadata": {
         "id": "_XJhEuhHIyjz"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -196,10 +181,38 @@
         "df3.show()"
       ],
       "metadata": {
-        "id": "fFm5e6tDI33f"
+        "id": "fFm5e6tDI33f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0adb257f-e21c-41d9-bcb6-40b3f18ba33c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------------+----------+-------------+-----------------+-------------+----------------+--------+----+\n",
+            "|user_id_sender|age_sender|gender_sender|user_id_recipient|age_recipient|gender_recipient|image_id|like|\n",
+            "+--------------+----------+-------------+-----------------+-------------+----------------+--------+----+\n",
+            "|       user002|        30|         Male|          user001|           28|          Female|image001|   1|\n",
+            "|       user003|        18|       Female|          user001|           28|          Female|image001|   1|\n",
+            "|       user004|        40|         Male|          user001|           28|          Female|image001|   0|\n",
+            "|       user005|        30|       Female|          user001|           28|          Female|image001|   0|\n",
+            "|       user002|        30|         Male|          user001|           28|          Female|image002|   1|\n",
+            "|       user003|        18|       Female|          user001|           28|          Female|image002|   1|\n",
+            "|       user004|        40|         Male|          user001|           28|          Female|image002|   1|\n",
+            "|       user005|        30|       Female|          user001|           28|          Female|image002|   1|\n",
+            "|       user001|        28|       Female|          user002|           30|            Male|image003|   0|\n",
+            "|       user003|        18|       Female|          user002|           30|            Male|image003|   1|\n",
+            "|       user004|        40|         Male|          user002|           30|            Male|image003|   1|\n",
+            "|       user005|        30|       Female|          user002|           30|            Male|image003|   1|\n",
+            "+--------------+----------+-------------+-----------------+-------------+----------------+--------+----+\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
